--- a/style.css
+++ b/style.css
@@ -1,23 +1,124 @@
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300;400;500;700&display=swap');
 
 body {
-    margin: 0%;
+    margin: 0 auto;
     padding: 0%;
 }
 
 .banner-part {
     text-align: center;
-    background-image: url('images/donation1.jpg');
+    background-image: url('images/donation6.jpg');
     background-size: cover;
     background-repeat: no-repeat;
+    opacity: 0.9;
     height: 669px;
     left: 0px;
     top: 0px;
     border-radius: 0px;
-
+    margin-bottom: 20vh;
 }
 
 .headline-area {
-    padding: 100px;
+    padding-top: 200px;
     color: white;
+    opacity: 1;
+}
+
+.headline {
+    font-size: 8vh;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 0.2rem;
+    opacity: 1;
+}
+
+.headline-area p {
+    font-size: 1.5em;
+    letter-spacing: 0.1rem;
+    opacity: 1;
+    font-weight: 100;
+}
+
+.btn {
+    border: none;
+    border-radius: 0.2em;
+    padding: 15px;
+    font-size: 2rem;
+    background-color: #FF5959;
+    ;
+    color: white;
+    letter-spacing: 0.1rem;
+}
+
+.donate-part {
+    margin-bottom: 130px;
+}
+
+.donate-details {
+    text-align: center;
+    margin-bottom: 60px;
+}
+
+.donate-details h1 {
+    font-size: 7vh;
+    letter-spacing: 0.1rem;
+}
+
+.donate-details p {
+    font-size: 1.5em;
+    letter-spacing: 0.1rem;
+    opacity: 1;
+    font-weight: 100;
+    color: #707070;
+}
+
+
+.money-range {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-bottom: 100px;
+}
+
+.money {
+    border: none;
+    box-shadow: 10px 10px 20px 5px #aaaaaa;
+    padding: 23px 43px;
+    background-color: #707070;
+    color: white;
+    border-radius: 5px;
+}
+
+.border-color {
+    border: 5px solid #FF5959;
+    box-shadow: 10px 10px 20px 5px #aaaaaa;
+    background-color: #FFEEEE;
+    padding: 23px 43px;
+    color: #FF5959;
+    border-radius: 5px;
+}
+
+.other {
+    text-align: center;
+}
+
+.other p {
+    font-family: Poppins;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 28px;
+    letter-spacing: 0px;
+    text-align: center;
+    color: #B3B3B3;
+}
+
+hr {
+    height: 1px;
+    border-width: 0;
+    color: #DADADA;
+    background-color: #DADADA;
+}
+
+.our-donate-part {
+    margin-bottom: 50px;
 }
