--- a/style.css
+++ b/style.css
@@ -122,3 +122,48 @@ hr {
 .our-donate-part {
     margin-bottom: 50px;
 }
+
+/* Plan part start */
+
+.three_part {
+    display: flex;
+    padding-left: 130px;
+    margin-bottom: 100px;
+}
+
+.one {
+    width: 25%;
+    background-color: #4F9DA61A;
+    padding-left: 30px;
+    border-radius: 10px;
+}
+
+.one_new {
+    margin: 0px 80px;
+    background-color: #FF59591A;
+}
+
+.last_one {
+    background-color: #FFF4D6;
+}
+
+.one img {
+    padding-top: 50px;
+    width: 22%;
+    padding-left: 0%;
+}
+
+.one h4 {
+    font-size: 20px;
+    font-weight: 600;
+    padding: 10px 0px;
+}
+
+.one p {
+    font-size: 16px;
+    color: rgb(82, 82, 82);
+    text-align: left;
+    width: 300px;
+}
+
+/* Plan part end */
