--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
     opacity: 1;
 }
 
-.headline-area p {
+.headline-area p{
     font-size: 1.5em;
     letter-spacing: 0.1rem;
     opacity: 1;
@@ -74,6 +74,7 @@ body {
     color: #707070;
 
 }
+
 
 
 .money-range {
@@ -198,7 +199,13 @@ hr {
     border-radius: 5px;
 
 }
-
+.type{   
+    padding-left: 400px; 
+    font-size: 1.5em;
+    letter-spacing: 0.1rem;
+    font-weight: 100;
+    line-height: 40px;
+}
 /* footer */
 #footer {
     height: 190px;
@@ -239,6 +246,13 @@ hr {
 
 
 /* My Section */
+.community{
+    font-size: 2em;
+    letter-spacing: 0.1rem;
+    line-height: 30px;
+    opacity: 1;
+    font-weight: 100;
+}
  #global{
     width: 100%;
     display: flex;
